Enhance WH Stock Reports and Income Statement Export

--- a/Frontend/views/groups.html
+++ b/Frontend/views/groups.html
@@ -283,9 +283,9 @@
                                         class="checkbox-label fw-bold-label" for="reports">Reports</label>
                                     <ul>
                                         <li>
-                                            <input type="checkbox" id="warehouse_reports"
+                                            <input type="checkbox" id="warehouse_sales_reports"
                                                 class="form-check-input"><label class="checkbox-label"
-                                                for="warehouse_reports">Warehouse Reports</label>
+                                                for="warehouse_sales_reports">WH Sales Reports</label>
                                             <ul class="list-unstyled">
                                                 <li><input type="checkbox" id="sales_report_link"
                                                         class="form-check-input"><label class="checkbox-label"
@@ -299,6 +299,13 @@
                                                 <li><input type="checkbox" id="payment_reports_link"
                                                         class="form-check-input"><label class="checkbox-label"
                                                         for="payment_reports_link">Payment Reports</label></li>
+                                            </ul>
+                                        </li>
+                                        <li>
+                                            <input type="checkbox" id="warehouse_reports"
+                                                class="form-check-input"><label class="checkbox-label"
+                                                for="warehouse_reports">WH Reports</label>
+                                            <ul class="list-unstyled">
                                                 <li><input type="checkbox" id="wh_customer_ledger_rpt"
                                                         class="form-check-input"><label class="checkbox-label"
                                                         for="wh_customer_ledger_rpt">WH Customer Ledger Report</label>
@@ -315,24 +322,13 @@
                                                         class="form-check-input"><label class="checkbox-label"
                                                         for="wh_item_ledger_rpt">WH Item Ledger</label>
                                                 </li>
-                                                <li><input type="checkbox" id="wh_cost_stock_rpt"
-                                                        class="form-check-input"><label class="checkbox-label"
-                                                        for="wh_cost_stock_rpt">WH Cost of Stock</label>
-                                                </li>
                                                 <li><input type="checkbox" id="wh_stock_activity_rpt"
                                                         class="form-check-input"><label class="checkbox-label"
                                                         for="wh_stock_activity_rpt">WH Stock Activity</label>
                                                 </li>
-                                                <li><input type="checkbox" id="wh_date_wise_stock_rpt"
-                                                        class="form-check-input"><label class="checkbox-label"
-                                                        for="wh_date_wise_stock_rpt">WH Date-Wise Stock</label>
-                                                </li>
-                                                <li><input type="checkbox" id="wh_stock_in_hand_rpt"
-                                                        class="form-check-input"><label class="checkbox-label"
-                                                        for="wh_stock_in_hand_rpt">WH Stock In Hand</label>
-                                                </li>
                                             </ul>
                                         </li>
+
                                         <li>
                                             <input type="checkbox" id="shop_reports" class="form-check-input"><label
                                                 class="checkbox-label" for="shop_reports">Shop Reports</label>
@@ -678,6 +674,7 @@
                                     </ul>
 
                                 </li>
+
                             </ul>
                         </div>
                     </div>
